<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.garganttua</groupId>
	<artifactId>garganttua-api</artifactId>
	<packaging>pom</packaging>
	<version>3.0.0-ALPHA01</version>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Jérémy Colombet</name>
			<email>jeremy.colombet@garganttua.com</email>
		</developer>
	</developers>

	<repositories>
		<repository>
			<id>github garganttua core</id>
			<name>github garganttua core</name>
			<url>https://maven.pkg.github.com/garganttua/garganttua-core</url>
		</repository>
	</repositories>

	<distributionManagement>
		<snapshotRepository>
			<id>github garganttua api</id>
			<name>github garganttua api</name>
			<url>https://maven.pkg.github.com/garganttua/garganttua-api</url>
		</snapshotRepository>
		<repository>
			<id>github garganttua api</id>
			<name>github garganttua api</name>
			<url>https://maven.pkg.github.com/garganttua/garganttua-api</url>
		</repository>
	</distributionManagement>

	<properties>
		<!-- Encoding -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>

		<!-- Garganttua Core -->
		<garganttua.core.version>2.0.0-ALPHA01</garganttua.core.version>

		<!-- Third-party dependencies -->
		<lombok.version>1.18.30</lombok.version>
		<slf4j.version>2.0.13</slf4j.version>
		<reflections.version>0.10.2</reflections.version>
		<javatuples.version>1.2</javatuples.version>
		<geojson-jackson.version>1.14</geojson-jackson.version>
		<javax.inject.version>1</javax.inject.version>
		<json-path.version>2.9.0</json-path.version>
		<jackson.version>2.17.0</jackson.version>

		<!-- Test dependencies -->
		<junit.version>5.11.4</junit.version>
		<mockito.version>5.14.2</mockito.version>

		<!-- Plugin versions -->
		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
		<maven-source-plugin.version>3.3.1</maven-source-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- Garganttua API modules -->
			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-api-spec</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-api-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-api-spring-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-api-spring-security-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-api-spring-interface-rest</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.garganttua</groupId>
				<artifactId>garganttua-api-native-image-config</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Garganttua Core dependencies -->
			<dependency>
				<groupId>com.garganttua.core</groupId>
				<artifactId>garganttua-script</artifactId>
				<version>${garganttua.core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.garganttua.core</groupId>
				<artifactId>garganttua-execution</artifactId>
				<version>${garganttua.core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.garganttua.core</groupId>
				<artifactId>garganttua-runtime</artifactId>
				<version>${garganttua.core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.garganttua.core</groupId>
				<artifactId>garganttua-injection</artifactId>
				<version>${garganttua.core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.garganttua.core</groupId>
				<artifactId>garganttua-mapper</artifactId>
				<version>${garganttua.core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.garganttua.core</groupId>
				<artifactId>garganttua-native</artifactId>
				<version>${garganttua.core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.garganttua.core</groupId>
				<artifactId>garganttua-reflection</artifactId>
				<version>${garganttua.core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.garganttua.core</groupId>
				<artifactId>garganttua-workflow</artifactId>
				<version>${garganttua.core.version}</version>
			</dependency>

			<!-- Third-party dependencies -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.reflections</groupId>
				<artifactId>reflections</artifactId>
				<version>${reflections.version}</version>
			</dependency>
			<dependency>
				<groupId>org.javatuples</groupId>
				<artifactId>javatuples</artifactId>
				<version>${javatuples.version}</version>
			</dependency>
			<dependency>
				<groupId>de.grundid.opendatalab</groupId>
				<artifactId>geojson-jackson</artifactId>
				<version>${geojson-jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.inject</groupId>
				<artifactId>javax.inject</artifactId>
				<version>${javax.inject.version}</version>
			</dependency>
			<dependency>
				<groupId>com.jayway.jsonpath</groupId>
				<artifactId>json-path</artifactId>
				<version>${json-path.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>

			<!-- Test dependencies -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<!-- Common dependencies inherited by all modules -->
	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<compilerArgs>
							<arg>-parameters</arg>
						</compilerArgs>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${maven-source-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>garganttua-api-spec</module>
		<module>garganttua-api-core</module>
		<!-- <module>garganttua-api-spring</module>
		<module>garganttua-api-security</module>
		<module>garganttua-api-native-image</module> -->
	</modules>
</project>
